# vlc-qt

./: .gitignore  CLAUDE.md  WEBOS_BUILD_PLAN.md  prompts.md
webos/: .gitignore  NEXT-STEPS.md  README.md  build-and-package.sh  build-libvlc-auto.sh  build-libvlc.sh  build-vlc-qt.sh  package-ipk.sh  package.sh  setup-device-sdk.sh
webos/app/: CMakeLists.txt  FBVideoWidget.cpp  FBVideoWidget.h  GLESVideoWidget.cpp  GLESVideoWidget.h  GLVideoWidget.cpp  GLVideoWidget.h  MainWindow.cpp  MainWindow.h  SDLVideoWidget.cpp  SDLVideoWidget.h  SoftwareVideoWidget.cpp  SoftwareVideoWidget.h  TranscodeDialog.cpp  TranscodeDialog.h  Transcoder.cpp  Transcoder.h  VideoProber.cpp  VideoProber.h  VideoWidget.cpp  VideoWidget.h  appinfo.json  main.cpp  run.sh  start  vlcplayer.sh
webos/cmake/: webos-arm-toolchain.cmake
webos/device/lib/: libcrypto.so.1.0.0  libssl.so.1.0.0
webos/device/sysroot/usr/include/: png.h  pngconf.h
webos/device/sysroot/usr/lib/: libz.so.1.2.3
webos/device/sysroot/usr/lib/pkgconfig/: alsa.pc  libpng.pc  libpng12.pc  nspr.pc  nss.pc
webos/package-staging/resources/: README.md
